force-app/main/default/objects/ContactPointEmail/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>User who created the record in Salesforce</description>
    <formula>HYPERLINK(&apos;/&apos; + CreatedBy.Id, CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By</label>
    <type>Text</type>
</CustomField>