force-app/main/default/objects/ContactPointEmail/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Date on which the record was created in Salesforce</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>