force-app/main/default/objects/ContactPointEmail/fields/Occurrence_Number__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Number__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - OCV</complianceGroup>
    <description>Prospect ( Organisation) email occurrence number.</description>
    <label>Occurrence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>