force-app/main/default/objects/ContactPointEmail/fields/Persona_Type__c.field-meta.xml
<CustomField>
    <fullName>Persona_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_OCV;Privacy_Personal_Information</complianceGroup>
    <description>Defines Customer role for which respective contact detail belongs to</description>
    <label>Persona Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>