force-app/main/default/objects/ContactPointEmail/fields/Preferred_Indicator__c.field-meta.xml
<CustomField>
   <fullName>Preferred_Indicator__c</fullName>
   <complianceGroup>Integrity_Accurate;Source_OCV;Privacy_Personal_Information</complianceGroup>
   <description>Preferred Indicator for contact point email</description>
   <label>Preferred Indicator</label>
   <type>Picklist</type>
   <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
         <value>
             <fullName>Y</fullName>
             <label>Yes</label>
         </value>
         <value>
             <fullName>N</fullName>
             <label>No</label>
         </value>
     </valueSetDefinition>
   </valueSet>
</CustomField>