force-app/main/default/objects/ContactPointEmail/fields/Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Verification_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>Verification Date when the Email got Verified by the Customer</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Verification Date</label>
    <type>Date</type>
</CustomField>