force-app/main/default/objects/ContactPointEmail/recordTypes/Hidden.recordType-meta.xml
<RecordType>
    <fullName>Hidden</fullName>
    <active>true</active>
    <label>Hidden</label>
</RecordType>