force-app/main/default/objects/ContactPointEmail/validationRules/CCRM_Restrict_SecurityEmailUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_Restrict_SecurityEmailUpdate</fullName>
    <active>true</active>
    <description>Prevents updates to Contact Point Email records when the Usage Type is set to &apos;Security Email&apos; for CCRM Users</description>
    <errorConditionFormula>$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false &amp;&amp;
$Permission.CCRM_Skip_Validation = false &amp;&amp;
$Profile.Name = $Label.CCRM_Profile_Name &amp;&amp;
NOT(ISNEW()) &amp;&amp;
ISPICKVAL(UsageType, &quot;Security Email&quot;) &amp;&amp;
Customer_Name__r.RecordType.DeveloperName = &apos;PersonAccount&apos; &amp;&amp;
Customer_Name__r.ANZx_Customer__c = TRUE</errorConditionFormula>
    <errorMessage>You are not authorized to update Security Email.</errorMessage>
</ValidationRule>