force-app/main/default/objects/ContactPointEmail/validationRules/DCRM_Restrict_UsageTypeUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>DCRM_Restrict_UsageTypeUpdate</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false &amp;&amp;
$Permission.CCRM_Skip_Validation = false &amp;&amp;
OR(
$Profile.Name = $Label.CCRM_Profile_Name ,
$Profile.Name = $Label.MLCRM_Profile_Name
) &amp;&amp;
ISCHANGED(UsageType)</errorConditionFormula>
    <errorMessage>Usage Type cannot be updated.</errorMessage>
</ValidationRule>